--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,5 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1rem;
+  font-family: 'Comic Sans MS';
+  text-align: center;
+}
+
+html {
+  font-size: 125%; /* 20px */
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
+
+label {
+  display: block;
+}
+
+input {
+  display: block;
+  width: 75%;
+  background-color: rgb(254, 255, 173);
+  align: middle;
+}
+
+.mb-1 { margin-bottom: 0.25rem }
+.mb-2 { margin-bottom: 0.5rem }
+.mb-3 { margin-bottom: 0.75rem }
