--- a/web/src/index.css
+++ b/web/src/index.css
@@ -27,6 +27,19 @@ input {
   background-color: rgb(254, 255, 173);
 }
 
+button {
+  background-color: rgb(147, 139, 255)
+}
+
 .mb-1 { margin-bottom: 0.25rem }
 .mb-2 { margin-bottom: 0.5rem }
 .mb-3 { margin-bottom: 0.75rem }
+
+@keyframes {
+  0% {
+    background-color: red;
+  }
+  100%{
+    background-color: green;
+  }
+}
